--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -7,7 +7,6 @@ nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
-    font-weight: bold;
 }
 nav ul li, footer ul li {
     display: inline;
@@ -15,7 +14,6 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
 }
 a:hover {
     text-decoration: underline;
@@ -40,4 +38,7 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+}
+li{
+    margin: 0.3em 0;
 }
