--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -14,7 +14,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #ddd;
+    color: #333;
 }
 a:hover {
     text-decoration: underline;
